[Spring] Try VT